5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1716_2499.log
== TEST (2019-05-15 12:05:49) 
-- CODE:
from math import*
k=int(input("numero natural:"))
y=k
t=1
while(t<y):
	e=1+1/factorial(t)
	y=e
	t=t+1
print()
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:05:55) 
-- CODE:
from math import*
k=int(input("numero natural:"))
y=k
t=1
while(t<y):
	e=1+1/factorial(t)
	y=e
	t=t+1
print(y)
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:06:38) 
-- CODE:
from math import*
k=int(input("numero natural:"))
y=k
t=1
while(t<y):
	e=1+(1/factorial(t))
	y=e
	t=t+1
print(round(y,8)
-- ERROR:
File "XXXX", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:06:46) 
-- CODE:
from math import*
k=int(input("numero natural:"))
y=k
t=1
while(t<y):
	e=1+(1/factorial(t))
	y=e
	t=t+1
print(round(y,8))
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:06:52) 
-- CODE:
from math import*
k=int(input("numero natural:"))
y=k
t=1
while(t<y):
	e=1+(1/factorial(t))
	y=e
	t=t+1
print(round(y,8))
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:06:54) 
-- CODE:
from math import*
k=int(input("numero natural:"))
y=k
t=1
while(t<y):
	e=1+(1/factorial(t))
	y=e
	t=t+1
print(round(y,8))
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:07:29) 
-- CODE:
from math import*
k=int(input("numero natural:"))
y=k
t=1
while(t<y):
	e=1+(1/factorial(t))
	y=e
	t=t+1
print(round(e,8))
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:07:34) 
-- CODE:
from math import*
k=int(input("numero natural:"))
y=k
t=1
while(t<y):
	e=1+(1/factorial(t))
	y=e
	t=t+1
print(round(t,8))
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:07:39) 
-- CODE:
from math import*
k=int(input("numero natural:"))
y=k
t=1
while(t<y):
	e=1+(1/factorial(t))
	y=e
	t=t+1
print(round(t,8))
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:07:56) 
-- CODE:
from math import*
k=int(input("numero natural:"))
y=k
t=1
while(t<k):
	e=1+(1/factorial(t))
	y=e
	t=t+1
print(round(t,8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:08:07) 
-- CODE:
from math import*
k=int(input("numero natural:"))
y=k
t=1
while(t<k):
	e=1+(1/factorial(t))
	y=e
	t=t+1
print(round(y,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:08:10) 
-- CODE:
from math import*
k=int(input("numero natural:"))
y=k
t=1
while(t<k):
	e=1+(1/factorial(t))
	y=e
	t=t+1
print(round(y,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:08:16) 
-- CODE:
from math import*
k=int(input("numero natural:"))
y=k
t=0
while(t<k):
	e=1+(1/factorial(t))
	y=e
	t=t+1
print(round(y,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:08:26) 
-- CODE:
from math import*
k=int(input("numero natural:"))
y=k
t=0
while(t<k):
	e=1+(1/factorial(t))
	y=e
	t=t+1
print(round(y,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:08:29) 
-- CODE:
from math import*
k=int(input("numero natural:"))
y=k
t=0
while(t<k):
	e=1+(1/factorial(t))
	y=e
	t=t+1
print(round(y,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:08:32) 
-- CODE:
from math import*
k=int(input("numero natural:"))
y=k
t=0
while(t<k):
	e=1+(1/factorial(t))
	y=e
	t=t+1
print(round(y,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:08:50) 
-- CODE:
from math import*
k=int(input("numero natural:"))
y=k
t=0
while(t<k):
	t=t+1
	e=1+(1/factorial(t))
	y=e
	
print(round(y,8))
-- OUTPUT:
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:08:54) 
-- CODE:
from math import*
k=int(input("numero natural:"))
y=k
t=0
while(t<k):
	t=t+1
	e=1+(1/factorial(t))
	y=e
	
print(round(y,8))
-- OUTPUT:
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:08:57) 
-- CODE:
from math import*
k=int(input("numero natural:"))
y=k
t=0
while(t<k):
	t=t+1
	e=1+(1/factorial(t))
	y=e
	
print(round(y,8))
-- OUTPUT:
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:08:59) 
-- CODE:
from math import*
k=int(input("numero natural:"))
y=k
t=0
while(t<k):
	t=t+1
	e=1+(1/factorial(t))
	y=e
	
print(round(y,8))
-- OUTPUT:
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:09:10) 
-- CODE:
from math import*
k=int(input("numero natural:"))
y=k
t=0
while(t<k):
	t=t+1
	e=1+(1/factorial(t))
	y=e
	
print(round(e,8))
-- OUTPUT:
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:09:12) 
-- CODE:
from math import*
k=int(input("numero natural:"))
y=k
t=0
while(t<k):
	t=t+1
	e=1+(1/factorial(t))
	y=e
	
print(round(e,8))
-- OUTPUT:
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:09:15) 
-- CODE:
from math import*
k=int(input("numero natural:"))
y=k
t=0
while(t<k):
	t=t+1
	e=1+(1/factorial(t))
	y=e
	
print(round(e,8))
-- OUTPUT:
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:09:19) 
-- CODE:
from math import*
k=int(input("numero natural:"))
y=k
t=0
while(t<k):
	t=t+1
	e=1+(1/factorial(t))
	y=e
	
print(round(e,8))
-- OUTPUT:
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:09:41) 
-- CODE:
from math import*
k=int(input("numero natural:"))
y=k
t=0
while(t<k):
	t=t+1
	e=1+(1/factorial(t))
	y=e
	
	print(round(e,8))
-- OUTPUT:
2.0
1.5
1.16666667
1.04166667
1.00833333
1.00138889
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:09:44) 
-- CODE:
from math import*
k=int(input("numero natural:"))
y=k
t=0
while(t<k):
	t=t+1
	e=1+(1/factorial(t))
	y=e
	
	print(round(e,8))
-- OUTPUT:
2.0
1.5
1.16666667
1.04166667
1.00833333
1.00138889
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:10:22) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=0
while(t<k):
	t=t+1
	e=1+(1/factorial(t))
	y=e
	
print(round(y,8))
-- OUTPUT:
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:10:47) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=0
while(t<k):
	e=1+(1/factorial(t))
	y=e
	t=t+1
print(round(y,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:11:05) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=0
while(t<k):
	e=1+(1/factorial(t))
	t=t+1
print(round(e,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 12:11:10) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=0
while(t<k):
	e=1+(1/factorial(t))
	t=t+1
print(round(e,8))
-- EXECUTION TIME:
0.208278
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.00138889
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.0
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.00833333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:11:28) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=1
while(t<k):
	e=1+1/factorial(t)
	t=t+1
print(round(e,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:11:31) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=1
while(t<k):
	e=1+1/factorial(t)
	t=t+1
print(round(e,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:11:54) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=1
while(t<k):
	e=1+1/factorial(t)
	t=t+1
print(round(e,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:11:57) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=1
while(t<k):
	e=1+1/factorial(t)
	t=t+1
print(round(e,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 12:12:03) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=1
while(t<k):
	e=1+1/factorial(t)
	t=t+1
print(round(e,8))
-- EXECUTION TIME:
0.187307
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.00138889
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.0
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.00833333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:13:06) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=0
y=k
while(k>t):
	e=1+1/factorial(t)
	t=t+1
	y=y+e
print(round(y,8))
-- OUTPUT:
16.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:13:11) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=0
y=k
while(k>t):
	e=1+1/factorial(t)
	t=t+1
	y=y+e
print(round(y,8))
-- OUTPUT:
16.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:13:14) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=0
y=k
while(k>t):
	e=1+1/factorial(t)
	t=t+1
	y=y+e
print(round(y,8))
-- OUTPUT:
16.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:13:29) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=0
y=k
while(t<k):
	e=1+1/factorial(t)
	t=t+1
	y=y+e
print(round(y,8))
-- OUTPUT:
16.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:13:38) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=1
y=k
while(t<k):
	e=1+1/factorial(t)
	t=t+1
	y=y+e
print(round(y,8))
-- OUTPUT:
14.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:13:48) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=k
y=k
while(t<k):
	e=1+1/factorial(t)
	t=t+1
	y=y+e
print(round(y,8))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:14:05) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=0
y=k
while(t<k):
	e=1+(1/factorial(t))
	t=t+1
	y=y+e
print(round(y,8))
-- OUTPUT:
16.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:14:38) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=0
y=0
while(t<k):
	e=1+(1/factorial(t))
	y=y+e
	t=t+1
print(round(y,8))
-- OUTPUT:
9.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:15:00) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=0

while(t<k):
	e=1+(1/factorial(t))
	y=e+e
	t=t+1
print(round(y,8))
-- OUTPUT:
2.00277778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:15:04) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=0

while(t<k):
	e=1+(1/factorial(t))
	y=e
	t=t+1
print(round(y,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:15:48) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=0
y=0
while(t<k):
	e=1+(1/factorial(t))
	y=y+e
	t=t+1
print(round(y,8))
-- OUTPUT:
9.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 12:15:52) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=0
y=0
while(t<k):
	e=1+(1/factorial(t))
	y=y+e
	t=t+1
print(round(y,8))
-- EXECUTION TIME:
0.139416
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
9.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
17.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
8.71666667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:15:56) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=0
y=1
while(t<k):
	e=1+(1/factorial(t))
	y=y+e
	t=t+1
print(round(y,8))
-- OUTPUT:
10.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:16:02) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=0
y=k,
while(t<k):
	e=1+(1/factorial(t))
	y=y+e
	t=t+1
print(round(y,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    y=y+e
TypeError: can only concatenate tuple (not "float") to tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:16:04) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=0
y=k
while(t<k):
	e=1+(1/factorial(t))
	y=y+e
	t=t+1
print(round(y,8))
-- OUTPUT:
16.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:16:13) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=0
y=t
while(t<k):
	e=1+(1/factorial(t))
	y=y+e
	t=t+1
print(round(y,8))
-- OUTPUT:
9.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:20:25) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=0
y=1
while(t<k):
	e=(1/factorial(t))
	y=y+e
	t=t+1
print(round(y,8))
-- OUTPUT:
3.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:20:37) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=0
y=1
while(t<k):
	e=(1/factorial(t))
	y=e
	t=t+1
print(round(y,8))
-- OUTPUT:
0.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:20:48) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=0
y=0
while(t<k):
	e=(1/factorial(t))
	y=1+e
	t=t+1
print(round(y,8))
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:20:54) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=0
y=0
while(t<k):
	e=(1/factorial(t))
	y=y+e
	t=t+1
print(round(y,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 12:20:59) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=0
y=0
while(t<k):
	e=(1/factorial(t))
	y=y+e
	t=t+1
print(round(y,8))
-- EXECUTION TIME:
0.214277
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:42:16) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=0
y=0
while(t<k):
	e=(1/factorial(t))
	y=y+e
	t=t+1
	print(t)
print(round(y,8))
-- OUTPUT:
1
2
3
4
5
6
7
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:42:30) 
-- CODE:
from math import*
k=int(input("numero natural:"))
t=0
y=0
while(t<k):
	e=(1/factorial(t))
	y=y+e
	t=t+1
	print(factorial(t))
print(round(y,8))
-- OUTPUT:
1
2
6
24
120
720
5040
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
